--- a/stylePages.css
+++ b/stylePages.css
@@ -1,11 +1,11 @@
 body{
-	background-image: /*MAKING THE IMAGE DARKER*/linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(pic1.jpg);
+	background-image: /*MAKING THE IMAGE DARKER*//*linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),*/ url(pic1.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
 	position: center;
 	padding-top: 200px;
-	padding-left:0%;
+	padding-left: 30%;
 	font-family: "Eco", sans-serif;
 	font-color:#4CAF50;
 }
@@ -21,8 +21,8 @@ body{
 	z-index: 1;
 	background: rgba(7, 40, 195,  0,0);
 	max-width: 360px;
-	/*margin: 0 auto 100px;*/
-	/*padding: 45px;*/
+	margin: 0 auto 100px;
+	padding: 45px;
 	text-align: center;
 }
 
@@ -83,48 +83,12 @@ body{
 	color: #F29E20  !important;
 }
 
-.New_Entry{ 
-	width: 360px;
-	padding: 10%  0 0;
-	margin: auto;
-	background: rgba(7, 40, 195,  0,0);
-}
-
-.Diary_Entry{
+.New_Entry div{
 	position: relative;
 	z-index: 1;
-	/*background-color: #ccc;*/
 	background: rgba(7, 40, 195,  0,0);
-	max-width: 400px;
+	max-width: 360px;
 	margin: 0 auto 100px;
-	padding: 45px;
+	padding: 50;
 	text-align: center;
 }
-
-.Diary_Entry input{
-	font-family: "Roboto",  sans-serif;
-	outline: 1;
-	background:f2f2f2;
-	width: 100%;
-	border: 0;
-	margin: 0 0 15px;
-	padding: 15px;
-	box -sizing: border-box;
-	font-size: 14px;  
-}
-
-.Diary_Entry button{
-	font-family: "Roboto", sans-serif;
-	text-transform: uppercase;
-	outline: 0;
-	background: #4CAF50;
-	width: 100%;
-	border: 0;
-	padding: 10px;
-	color: #FFFFFF;
-	font-size: 14px;
-	cursor: pointer;
-}
-
-.Dairy_Entry button:hover ,.form button:active{
-	background: #43A047;
