--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body{
 	background: rgba(7, 40, 195,  0,0);
 }
 
-.Diary_Entry{
+.tab tab-1{
 	position: relative;
 	z-index: 1;
 	/*background-color: #ccc;*/
@@ -113,7 +113,7 @@ body{
 	font-size: 14px;  
 }
 
-.Diary_Entry button{
+.container button{
 	font-family: "Roboto", sans-serif;
 	text-transform: uppercase;
 	outline: 0;
@@ -126,5 +126,5 @@ body{
 	cursor: pointer;
 }
 
-.Dairy_Entry button:hover ,.form button:active{
+.container button:hover ,.form button:active{
 	background: #43A047;
